18-delete-autoscale.yaml
apiVersion: serving.knative.dev/v1alpha1
kind: Service
metadata:
  name: greeter
spec:
  runLatest:
    configuration:
      revisionTemplate:
        metadata:
          annotations:
          autoscaling.knative.dev/target: "10" 
        spec:
          container:
            image: quay.io/rhdevelopers/knative-tutorial-greeter:quarkus
            livenessProbe:
              httpGet:
                path: /healthz
            readinessProbe:
              httpGet:
                path: /healthz
