19-deploy-sink-service.yaml
apiVersion: serving.knative.dev/v1alpha1
kind: Service
metadata:
  name: event-greeter
spec:
  runLatest:
    configuration:
      revisionTemplate:
        metadata:
          labels:
            app: event-greeter
        spec:
          container:
            image: quay.io/rhdevelopers/knative-tutorial-greeter:quarkus
