11-route-all-rev1.yaml
apiVersion: serving.knative.dev/v1alpha1
kind: Route
metadata:
  name: greeter
spec:
  traffic:
    - revisionName: greeter-4hlfh
      percent: 100
